--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.url=jdbc:mysql://mysql:3306/auth-database?useSSL=false&allowPu
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+api.security.token.secret=${JWT_SECRET:oh-my-secret}
