--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 api.security.token.secret=${JWT_SECRET:oh-my-secret}
+
+logging.level.org.springframework.security=DEBUG
+logging.level.com.example.demo=DEBUG
